<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/openSource"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="13dp"
                android:layout_marginTop="10dp"
                android:text="@string/enter_text_to_analyse"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/copyTxt"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/clipboard"
                    android:contentDescription="@string/app_name"/>
                <ImageView
                    android:id="@+id/clearTxt"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/close"
                    android:contentDescription="@string/app_name"/>
            </LinearLayout>
            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/enter_text_to_analyse"
                android:textColorHint="@color/hint"
                android:textColor="@color/white"
                android:padding="10dp"
                android:gravity="top"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="textMultiLine|textCapSentences"
                android:minLines="8"
                android:maxLines="15"
                android:minHeight="10dp"
                android:autofillHints="name" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5"
                android:gravity="end"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">
                    <Button
                        android:id="@+id/titleCase"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        android:text="@string/titlecase" />
                    <Button
                        android:id="@+id/upperCase"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:text="@string/uppercase" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/headingS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_summary"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/chWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="2dp"
                android:text="@string/chWords"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/headingP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/preview"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/previewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:text="@string/previewTxt"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@id/openSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_weight="1"
            android:src="@drawable/line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/heart"
                android:contentDescription="@string/app_name" />
            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="3dp"
                android:layout_marginBottom="2dp"
                android:text="@string/open_source_on_github"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>